--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "scripts": {
     "lint": "eslint",
     "build": "tsc",
-    "start": "yarn build && node dist/index.js"
+    "prepare": "npm run build",
+    "run": "npm run build && node dist/run.js"
   },
   "devDependencies": {
     "@types/node": "^18.6.3",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
   "eslintConfig": {
@@ -29,7 +32,8 @@
     "extends": [
       "eslint:recommended",
       "plugin:@typescript-eslint/recommended",
-      "plugin:@typescript-eslint/recommended-requiring-type-checking"
+      "plugin:@typescript-eslint/recommended-requiring-type-checking",
+      "prettier"
     ],
     "parser": "@typescript-eslint/parser",
     "plugins": [
@@ -39,6 +43,11 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "dayjs": "^1.11.4"
-  }
+    "dayjs": "^1.11.4",
+    "node-cache": "^5.1.2"
+  },
+  "keywords": [
+    "nightscout",
+    "diasend"
+  ]
 }
