--- a/package.json
+++ b/package.json
@@ -54,5 +54,11 @@
   "keywords": [
     "nightscout",
     "diasend"
-  ]
+  ],
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "main"
+    ]
+  }
 }
