--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      # install npm dependencies
+      - run: yarn install --frozen-lockfile
+      - run: yarn build
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
         env:
