feat: import manual blood glucose measurements as well
- also added tests

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,20 @@
         "${workspaceFolder}/dist/**/*.js"
       ],
       "envFile": "${workspaceFolder}/.env"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Test-Run Bridge (Debug)",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "program": "${workspaceFolder}/dist/test-run.js",
+      "preLaunchTask": "npm: build",
+      "outFiles": [
+        "${workspaceFolder}/dist/**/*.js"
+      ],
+      "envFile": "${workspaceFolder}/.env"
     }
   ]
 }
