--- a/package.json
+++ b/package.json
@@ -13,16 +13,21 @@
     "lint": "eslint .",
     "build": "tsc",
     "prepare": "npm run build",
-    "run": "npm run build && node dist/run.js",
-    "test-run": "npm run build && node dist/test-run.js"
+    "run": "ts-node dist/run.js",
+    "test-run": "ts-node dist/test-run.js",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.8",
     "@types/node": "^18.7.7",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^28",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
   "eslintConfig": {
