--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v3
       # install npm dependencies
       - run: yarn install --frozen-lockfile
+      - run: yarn test
       - run: yarn build
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v3
