--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint .",
     "build": "tsc",
     "prepare": "npm run build",
-    "run": "ts-node dist/run.js",
+    "run": "yarn build && node dist/run.js",
     "test": "jest"
   },
   "devDependencies": {
