feat: scrape basal rate from diasend website

--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "run": "yarn build && node dist/run.js",
     "test": "jest"
   },
+  "engines": {
+    "node": ">=14"
+  },
   "devDependencies": {
+    "@types/cheerio": "^0.22.31",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.7.7",
+    "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
@@ -52,8 +57,12 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "axios-cookiejar-support": "^4.0.3",
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.4",
-    "node-cache": "^5.1.2"
+    "node-cache": "^5.1.2",
+    "rand-user-agent": "^1.0.78",
+    "tough-cookie": "^4.1.2"
   },
   "keywords": [
     "nightscout",
