--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "tsc",
     "prepare": "npm run build",
     "start": "npm run run",
-    "run": "npm run build && node dist/run.js",
+    "run": "npm run build && node dist/cli/run.js",
     "test": "cross-env TZ=Europe/Berlin jest --silent"
   },
   "engines": {
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/cheerio": "^0.22.31",
     "@types/jest": "^28.1.8",
+    "@types/lodash.partition": "^4.6.7",
     "@types/node": "^18.7.7",
     "@types/tough-cookie": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
@@ -55,7 +56,8 @@
       "unused-imports"
     ],
     "ignorePatterns": [
-      "dist/**"
+      "dist/**",
+      "tmp/**"
     ],
     "root": true
   },
@@ -65,6 +67,7 @@
     "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.3",
+    "lodash.partition": "^4.6.0",
     "node-cache": "^5.1.2",
     "rand-user-agent": "^1.0.78",
     "tough-cookie": "^4.1.2"
@@ -72,11 +75,5 @@
   "keywords": [
     "nightscout",
     "diasend"
-  ],
-  "release": {
-    "branches": [
-      "+([0-9])?(.{+([0-9]),x}).x",
-      "main"
-    ]
-  }
+  ]
 }
