--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "dayjs": "^1.11.4",
     "dotenv": "^16.0.3",
     "lodash.partition": "^4.6.0",
+    "loglevel": "^1.8.1",
     "node-cache": "^5.1.2",
     "rand-user-agent": "^1.0.78",
     "tough-cookie": "^4.1.2"
