--- a/package.json
+++ b/package.json
@@ -75,6 +75,19 @@
   },
   "keywords": [
     "nightscout",
-    "diasend"
-  ]
+    "diasend",
+    "sync"
+  ],
+  "release": {
+    "branches": [
+      "+([0-9])?(.{+([0-9]),x}).x",
+      "main",
+      "next",
+      "next-major",
+      {
+        "name": "beta",
+        "prerelease": true
+      }
+    ]
+  }
 }
